@@ -22,6 +22,8 @@ File (Field) Paths 7.x-1.x-dev, xxxx-xx-xx (development release)
 - #1985650: Fixed issue with moved Drush file in .info.
 - #1985280 by Deciphered, drasgardian: Fixed issue with hook_entity_update()
     foreach loop.
+- #1942720 by Deciphered, kaare, alex.designworks, pp, BWPanda: Added slash
+    cleanup functionality.
 - #1495716/#1986472: Fixed issue with D6 -> D7 upgrade path.
 - #1292436 by maximpodorov, InternetDevels: Fixed issue pathinfo and UTF files.
 - Added tests.
